# SentraCX

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
apps/api-ai-analytics/: .env.example  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt
apps/api-ai-analytics/app/: main.py
apps/api-ai-analytics/app/core/: config.py  scheduler.py
apps/api-ai-analytics/app/db/: mongo.py  redis.py
apps/api-ai-analytics/app/helpers/: anonymizer.py
apps/api-ai-analytics/app/lib/: crm_client.py  groq_client.py  oos_client.py
apps/api-ai-analytics/app/ml/: churn_model.py  clv_model.py  conversation_analyzer.py  nba_model.py  segment_model.py  ticket_analyzer.py
apps/api-ai-analytics/app/models/: config_models.py  customer_models.py  ticket_models.py
apps/api-ai-analytics/app/schemas/: config_schemas.py  conversation_schemas.py  customer_schemas.py  dashboard_schemas.py  ingestion_schemas.py  ticket_schemas.py
apps/api-ai-analytics/app/services/: config_service.py  conversation_analysis_service.py  customer_insights_service.py  dashboard_service.py  order_ingestion_service.py  ticket_analysis_service.py  ticket_ingestion_service.py
apps/api-ai-analytics/tests/helpers/: __init__.py  test_anonymizer.py
apps/api-ai-analytics/tests/lib/: internal-auth-service.code-workspace  test_crm_client.py  test_groq_client.py
apps/api-ai-analytics/tests/ml/: test_churn_model.py  test_clv_model.py  test_nba_model.py  test_ticket_analyzer.py
apps/api-ai-analytics/tests/schemas/: test_customer_schemas.py  test_ticket_schemas.py
(+401 files in other folders)
